[package]
name = "craig_iter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
enum_dispatch = "0.3.7"
criterion = "0.5.1"
rand = "0.8.4"
macroquad = "*"

[[bench]]
name = "my_benchmark"
harness = false